--- a/search.html
+++ b/search.html
@@ -1,149 +1,266 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Search the Void</title>
-  <style>
-    body {
-      background-color: #0f0f0f;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      margin: 0;
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Search the Void</title>
+<style>
+body {
+background-color: #0f0f0f;
+color: #fff;
+font-family: Arial, sans-serif;
+margin: 0;
+padding: 0;
+}
+
+header {
+text-align: center;
+padding: 1rem;
+background-color: #1a1a1a;
+border-bottom: 1px solid #333;
+font-size: 1.2rem;
+font-weight: bold;
+}
+
+.container {
+padding: 1rem;
+padding-bottom: 6rem;
+max-width: 600px;
+margin: auto;
+}
+
+input[type="text"] {
+width: 100%;
+padding: 0.6rem;
+background-color: #1c1c1c;
+border: 1px solid #333;
+color: #fff;
+border-radius: 6px;
+font-size: 1rem;
+margin-bottom: 1rem;
+}
+
+.section-title {
+font-size: 1rem;
+color: #888;
+margin-top: 2rem;
+margin-bottom: 0.5rem;
+}
+
+    .result,
+.achievement-tile {
+border: 1px solid #333;
+background-color: #1a1a1a;
+padding: 1rem;
+border-radius: 6px;
+margin-bottom: 0.8rem;
+}
+
+    .result strong,
+.achievement-tile strong {
+display: block;
+margin-bottom: 0.3rem;
+color: #00bfff;
+}
+
+.achievement-tile.glow {
+border: 1px solid #00bfff;
+box-shadow: 0 0 8px #00bfff55;
+}
+
+    .result {
+      border: 1px solid #333;
+      background-color: #1a1a1a;
       padding: 1rem;
+      border-radius: 6px;
+      margin-bottom: 0.8rem;
     }
-    h1 {
-      text-align: center;
-      margin-bottom: 1rem;
-    }
-    input[type="text"] {
-      width: 100%;
-      padding: 0.7rem;
-      font-size: 1rem;
-      margin-bottom: 1.5rem;
-      background-color: #1a1a1a;
-      border: 1px solid #333;
-      border-radius: 4px;
-      color: #fff;
-    }
-    .section {
-      margin-bottom: 2rem;
-    }
-    .achievement-item, .user-item {
-      padding: 0.7rem;
-      background-color: #1a1a1a;
-      border: 1px solid #333;
-      border-radius: 4px;
-      margin-bottom: 0.5rem;
-      cursor: pointer;
-      transition: background 0.2s;
-    }
-    .achievement-item.locked {
-      color: #777;
-      opacity: 0.6;
-    }
-    .achievement-item.unlocked {
-      border-color: #00bfff;
-      color: #fff;
-    }
-    .show-all {
-      background: none;
-      border: 1px solid #444;
-      padding: 0.5rem 1rem;
-      color: #ccc;
-      border-radius: 4px;
-      cursor: pointer;
-      display: block;
-      margin: 0 auto;
-    }
-    .bottom-nav {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      background-color: #1a1a1a;
-      border-top: 1px solid #333;
-      display: flex;
-      justify-content: space-around;
-      padding: 0.5rem 0;
-    }
-    .bottom-nav a {
-      color: #888;
+
+    .result a {
+      color: #00bfff;
       text-decoration: none;
-      font-size: 1.3rem;
     }
-  </style>
+
+.leaderboard-entry {
+background-color: #1a1a1a;
+padding: 0.8rem;
+border: 1px solid #333;
+border-radius: 6px;
+margin-bottom: 0.6rem;
+font-size: 0.9rem;
+}
+
+.leaderboard-entry span {
+display: block;
+color: #aaa;
+margin-top: 0.2rem;
+}
+
+.you {
+border-color: #00bfff;
+box-shadow: 0 0 6px #00bfff33;
+}
+
+.bottom-nav {
+position: fixed;
+bottom: 0;
+width: 100%;
+background-color: #1a1a1a;
+border-top: 1px solid #333;
+display: flex;
+justify-content: space-around;
+padding: 0.5rem 0;
+}
+
+.bottom-nav a {
+color: #888;
+text-decoration: none;
+font-size: 1.3rem;
+}
+
+#showAllBtn {
+display: block;
+margin: 0.8rem auto 2rem;
+background-color: #1a1a1a;
+border: 1px solid #555;
+padding: 0.5rem 1rem;
+color: #ccc;
+border-radius: 5px;
+cursor: pointer;
+}
+</style>
 </head>
 <body>
-  <h1>Search the Void</h1>
-  <input type="text" id="searchInput" placeholder="Search achievements or users...">
+<header>Search the Void</header>
 
-  <div class="section">
-    <h2>Achievements</h2>
-    <div id="achievementList"></div>
-    <button class="show-all" onclick="showAllAchievements()">Show All Achievements</button>
-  </div>
+<div class="container">
+<input type="text" id="searchInput" placeholder="Search achievements or accounts..." />
 
-  <div class="section">
-    <h2>Users</h2>
-    <div id="userList"></div>
-  </div>
+<div class="section-title">Achievements</div>
+<div id="achievementResults"></div>
+<button id="showAllBtn">Show all achievements</button>
 
-  <div class="bottom-nav">
-    <a href="index.html">🏠</a>
-    <a href="search.html">🔍</a>
-    <a href="publish.html">➕</a>
-    <a href="reels.html">🎞️</a>
-    <a href="profile.html">👤</a>
-  </div>
+<div class="section-title">Accounts</div>
+<div id="userResults"></div>
 
-  <script>
-    const allAchievements = JSON.parse(localStorage.getItem("achievementList")) || [];
-    const unlocked = JSON.parse(localStorage.getItem("achievements")) || [];
-    const achievementListEl = document.getElementById("achievementList");
-    const userListEl = document.getElementById("userList");
-    const searchInput = document.getElementById("searchInput");
+<div class="section-title">Leaderboard</div>
+<div id="leaderboard"></div>
+</div>
 
-    const fakeUsers = ["void_vibes", "scroller3000", "ghostfeed", "lostinloop", "tapmaster"];
-    let showingAll = false;
+<div class="bottom-nav">
+<a href="index.html">🏠</a>
+<a href="search.html">🔍</a>
+<a href="publish.html">➕</a>
+<a href="reels.html">🎞️</a>
+<a href="profile.html">👤</a>
+</div>
 
-    function renderAchievements(filter = "") {
-      achievementListEl.innerHTML = "";
-      const toShow = showingAll ? allAchievements : allAchievements.slice(0, 5);
-      toShow.forEach(ach => {
-        if (!ach.name.toLowerCase().includes(filter.toLowerCase()) && !ach.desc.toLowerCase().includes(filter.toLowerCase())) return;
-        const div = document.createElement("div");
-        div.className = "achievement-item";
-        div.classList.add(unlocked.includes(ach.key) ? "unlocked" : "locked");
-        div.innerHTML = `<strong>${ach.name}</strong><br><small>${ach.desc}</small>`;
-        achievementListEl.appendChild(div);
-      });
-    }
+<script>
+// 50 achievements (load from localStorage or fallback to empty array)
+const fullAchievements = JSON.parse(localStorage.getItem("achievementList")) || [];
+const unlocked = JSON.parse(localStorage.getItem("achievements")) || [];
 
-    function renderUsers(filter = "") {
-      userListEl.innerHTML = "";
-      fakeUsers.forEach(user => {
-        if (!user.toLowerCase().includes(filter.toLowerCase())) return;
-        const div = document.createElement("div");
-        div.className = "user-item";
-        div.textContent = `@${user}`;
-        div.onclick = () => window.location.href = "user.html";
-        userListEl.appendChild(div);
-      });
-    }
+const fakeUsernames = [
+"void_vibes", "scroller3000", "ghostfeed", "lostinloop",
+"tapmaster", "doomposter", "feed.exe", "no_signal",
+"lurkerbot", "user_0000"
+];
 
-    function showAllAchievements() {
-      showingAll = true;
-      renderAchievements(searchInput.value);
-    }
+const achievementResults = document.getElementById("achievementResults");
+const searchInput = document.getElementById("searchInput");
+const showAllBtn = document.getElementById("showAllBtn");
+const userResults = document.getElementById("userResults");
+const leaderboard = document.getElementById("leaderboard");
 
-    searchInput.addEventListener("input", () => {
-      renderAchievements(searchInput.value);
-      renderUsers(searchInput.value);
+let showingAll = false;
+
+function renderAchievements() {
+  achievementResults.innerHTML = "";
+  const list = showingAll ? fullAchievements : fullAchievements.slice(0, 4);
+  list.forEach(ach => {
+    const div = document.createElement("div");
+    div.className = "achievement-tile";
+    if (unlocked.includes(ach.key)) div.classList.add("glow");
+    div.innerHTML = `<strong>${ach.name}</strong>${ach.desc}`;
+    achievementResults.appendChild(div);
+  });
+  showAllBtn.style.display = showingAll ? "none" : "block";
+}
+
+showAllBtn.addEventListener("click", () => {
+  showingAll = true;
+  renderAchievements();
+});
+
+function renderSearch(query = "") {
+  const q = query.toLowerCase();
+
+  const matches = fullAchievements.filter(ach =>
+    ach.name.toLowerCase().includes(q) || ach.desc.toLowerCase().includes(q)
+  );
+
+  if (q) {
+    achievementResults.innerHTML = "";
+    matches.forEach(ach => {
+      const div = document.createElement("div");
+      div.className = "achievement-tile";
+      if (unlocked.includes(ach.key)) div.classList.add("glow");
+      div.innerHTML = `<strong>${ach.name}</strong>${ach.desc}`;
+      achievementResults.appendChild(div);
     });
-
-    // Initial render (first 5 achievements)
+    showAllBtn.style.display = "none";
+  } else {
     renderAchievements();
-    renderUsers();
-  </script>
+  }
+
+  userResults.innerHTML = "";
+  fakeUsernames.forEach(user => {
+    if (user.toLowerCase().includes(q)) {
+      const div = document.createElement("div");
+      div.className = "result";
+      div.innerHTML = `<strong><a href="user.html?username=${user}">@${user}</a></strong>This account is void.`;
+      userResults.appendChild(div);
+    }
+  });
+}
+
+const yourStats = {
+  username: "you",
+  minutes: Math.floor((parseInt(localStorage.getItem("secondsWasted")) || 0) / 60),
+  likes: parseInt(localStorage.getItem("likesGiven")) || 0,
+  scrolls: parseInt(localStorage.getItem("scrollCount")) || 0
+};
+
+function randomStats(seed) {
+  const base = seed.split("").reduce((a, c) => a + c.charCodeAt(0), 0);
+  return {
+    username: seed,
+    minutes: Math.floor((base * 3) % 100),
+    likes: Math.floor((base * 7) % 50),
+    scrolls: Math.floor((base * 13) % 200)
+  };
+}
+
+const fakeStats = fakeUsernames.map(name => randomStats(name));
+const allUsers = [yourStats, ...fakeStats];
+allUsers.sort((a, b) => b.minutes - a.minutes);
+
+allUsers.forEach(user => {
+  const div = document.createElement("div");
+  div.className = "leaderboard-entry";
+  if (user.username === "you") div.classList.add("you");
+  div.innerHTML = `
+       <strong><a href="${user.username === 'you' ? 'profile.html' : `user.html?username=${user.username}`}">@${user.username}</a></strong>
+       <span>Minutes Wasted: ${user.minutes}</span>
+       <span>Likes Given: ${user.likes}</span>
+       <span>Scrolls: ${user.scrolls}</span>
+     `;
+  leaderboard.appendChild(div);
+});
+
+renderAchievements();
+renderSearch();
+searchInput.addEventListener("input", e => renderSearch(e.target.value));
+</script>
 </body>
 </html>
