--- a/search.html
+++ b/search.html
@@ -47,7 +47,7 @@ margin-top: 2rem;
 margin-bottom: 0.5rem;
 }
 
-    .result,
+.result,
 .achievement-tile {
 border: 1px solid #333;
 background-color: #1a1a1a;
@@ -56,7 +56,7 @@ border-radius: 6px;
 margin-bottom: 0.8rem;
 }
 
-    .result strong,
+.result strong,
 .achievement-tile strong {
 display: block;
 margin-bottom: 0.3rem;
@@ -68,18 +68,11 @@ border: 1px solid #00bfff;
 box-shadow: 0 0 8px #00bfff55;
 }
 
-    .result {
-      border: 1px solid #333;
-      background-color: #1a1a1a;
-      padding: 1rem;
-      border-radius: 6px;
-      margin-bottom: 0.8rem;
-    }
-
-    .result a {
-      color: #00bfff;
-      text-decoration: none;
-    }
+.result a,
+.leaderboard-entry a {
+  color: #00bfff;
+  text-decoration: none;
+}
 
 .leaderboard-entry {
 background-color: #1a1a1a;
