--- a/index.html
+++ b/index.html
@@ -143,13 +143,14 @@ font-size: 1.3rem;
 </header>
 
 <div class="stories">
-<div class="story"></div>
-<div class="story"></div>
-<div class="story"></div>
-<div class="story"></div>
-<div class="story"></div>
-<div class="story"></div>
+  <a class="story" href="story.html?user=void_vibes"></a>
+  <a class="story" href="story.html?user=scroller3000"></a>
+  <a class="story" href="story.html?user=ghostfeed"></a>
+  <a class="story" href="story.html?user=lostinloop"></a>
+  <a class="story" href="story.html?user=tapmaster"></a>
+  <a class="story" href="story.html?user=doomposter"></a>
 </div>
+
 
 <main id="feed"></main>
 
