--- a/story.html
+++ b/story.html
@@ -10,15 +10,21 @@
       background-color: #0f0f0f;
       color: #fff;
       font-family: Arial, sans-serif;
-      overflow-x: scroll;
-      scroll-snap-type: x mandatory;
-      display: flex;
       height: 100vh;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      position: relative;
     }
 
     .story-slide {
-      scroll-snap-align: start;
-      flex: 0 0 100%;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -26,6 +32,13 @@
       text-align: center;
       padding: 2rem;
       box-sizing: border-box;
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out;
+    }
+
+    .story-slide.active {
+      opacity: 1;
+      z-index: 1;
     }
 
     .avatar {
@@ -61,11 +74,30 @@
       left: 10px;
       z-index: 999;
     }
+
+    .next-button {
+      position: fixed;
+      top: 50%;
+      right: 10px;
+      transform: translateY(-50%);
+      font-size: 1.5rem;
+      color: #ccc;
+      background-color: #1a1a1a;
+      border: 1px solid #444;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      z-index: 999;
+    }
   </style>
 </head>
 <body>
   <a class="back-button" href="index.html">← Back to Feed</a>
-
+  <div class="next-button" onclick="nextStory()">›</div>
   <div id="storyWrapper"></div>
 
   <script>
@@ -83,6 +115,7 @@
     ];
 
     const storyWrapper = document.getElementById("storyWrapper");
+    let currentIndex = 0;
 
     usernames.forEach((username, i) => {
       const message = messages[i % messages.length];
@@ -90,14 +123,21 @@
 
       const slide = document.createElement("div");
       slide.className = "story-slide";
+      if (i === 0) slide.classList.add("active");
       slide.innerHTML = `
         <img class="avatar" src="${avatar}" alt="avatar">
         <div class="username">@${username}</div>
         <div class="message">${message}</div>
       `;
-
       storyWrapper.appendChild(slide);
     });
+
+    function nextStory() {
+      const slides = document.querySelectorAll(".story-slide");
+      slides[currentIndex].classList.remove("active");
+      currentIndex = (currentIndex + 1) % slides.length;
+      slides[currentIndex].classList.add("active");
+    }
   </script>
 </body>
 </html>
