--- a/index.html
+++ b/index.html
@@ -6,130 +6,132 @@
 <title>InstaVoid</title>
 <style>
 body {
-background-color: #0f0f0f;
-color: #fff;
-font-family: Arial, sans-serif;
-margin: 0;
-padding: 0;
+  background-color: #0f0f0f;
+  color: #fff;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 header {
-display: flex;
-align-items: center;
-justify-content: space-between;
-padding: 1rem;
-background-color: #1a1a1a;
-border-bottom: 1px solid #333;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+  background-color: #1a1a1a;
+  border-bottom: 1px solid #333;
 }
 .logo {
-font-size: 1.4rem;
-font-weight: bold;
-letter-spacing: 1px;
-color: #fff;
+  font-size: 1.4rem;
+  font-weight: bold;
+  letter-spacing: 1px;
+  color: #fff;
 }
 .nav-icons {
-display: flex;
-align-items: center;
-gap: 15px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
 }
 .nav-icons img {
-width: 24px;
-height: 24px;
-cursor: pointer;
-filter: invert(60%);
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  filter: invert(60%);
 }
 .stories {
-display: flex;
-overflow-x: auto;
-padding: 1rem;
-border-bottom: 1px solid #333;
+  display: flex;
+  overflow-x: auto;
+  padding: 1rem;
+  border-bottom: 1px solid #333;
 }
 .story {
-flex: 0 0 auto;
-width: 60px;
-height: 60px;
-border-radius: 50%;
-background-color: #444;
-margin-right: 10px;
-border: 2px solid #f44;
+  flex: 0 0 auto;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-right: 10px;
+  border: 2px solid #f44;
+  background-size: cover;
+  background-position: center;
+  background-color: #444;
 }
 main {
-padding: 1rem;
-padding-bottom: 4rem;
+  padding: 1rem;
+  padding-bottom: 4rem;
 }
 .post {
-background-color: #1c1c1c;
-border: 1px solid #333;
-margin: 2rem auto;
-width: 100%;
-max-width: 400px;
-color: #fff;
+  background-color: #1c1c1c;
+  border: 1px solid #333;
+  margin: 2rem auto;
+  width: 100%;
+  max-width: 400px;
+  color: #fff;
 }
 .post-header {
-display: flex;
-align-items: center;
-padding: 10px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
 }
 .post-header img {
-width: 40px;
-height: 40px;
-border-radius: 50%;
-margin-right: 10px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
 }
 .post-header span {
-font-weight: bold;
-color: #ccc;
+  font-weight: bold;
+  color: #ccc;
 }
 .post-content {
-padding: 10px;
-font-size: 1rem;
-color: #aaa;
-text-align: center;
+  padding: 10px;
+  font-size: 1rem;
+  color: #aaa;
+  text-align: center;
 }
 .post-actions {
-display: flex;
-justify-content: space-around;
-padding: 10px;
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
 }
 .post-actions button {
-background: none;
-border: none;
-cursor: pointer;
-color: #ccc;
-font-size: 1.1rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #ccc;
+  font-size: 1.1rem;
 }
 #waste-counter,
 #like-counter {
-position: fixed;
-font-size: 0.9rem;
-color: #666;
-background-color: #1a1a1a;
-padding: 6px 10px;
-border-radius: 6px;
-border: 1px solid #333;
-z-index: 999;
+  position: fixed;
+  font-size: 0.9rem;
+  color: #666;
+  background-color: #1a1a1a;
+  padding: 6px 10px;
+  border-radius: 6px;
+  border: 1px solid #333;
+  z-index: 999;
 }
 #waste-counter {
-bottom: 50px;
-right: 10px;
+  bottom: 50px;
+  right: 10px;
 }
 #like-counter {
-bottom: 50px;
-left: 10px;
+  bottom: 50px;
+  left: 10px;
 }
 .bottom-nav {
-position: fixed;
-bottom: 0;
-width: 100%;
-background-color: #1a1a1a;
-border-top: 1px solid #333;
-display: flex;
-justify-content: space-around;
-padding: 0.5rem 0;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #1a1a1a;
+  border-top: 1px solid #333;
+  display: flex;
+  justify-content: space-around;
+  padding: 0.5rem 0;
 }
 .bottom-nav a {
-color: #888;
-text-decoration: none;
-font-size: 1.3rem;
+  color: #888;
+  text-decoration: none;
+  font-size: 1.3rem;
 }
 </style>
 </head>
@@ -137,20 +139,12 @@ font-size: 1.3rem;
 <header>
 <div class="logo">InstaVoid</div>
 <div class="nav-icons">
-<img src="https://cdn-icons-png.flaticon.com/512/992/992651.png" alt="new post" />
-<img src="https://cdn-icons-png.flaticon.com/512/1827/1827370.png" alt="messages" />
+  <img src="https://cdn-icons-png.flaticon.com/512/992/992651.png" alt="new post" />
+  <img src="https://cdn-icons-png.flaticon.com/512/1827/1827370.png" alt="messages" />
 </div>
 </header>
 
-<div class="stories">
-  <a class="story" href="story.html?user=void_vibes"></a>
-  <a class="story" href="story.html?user=scroller3000"></a>
-  <a class="story" href="story.html?user=ghostfeed"></a>
-  <a class="story" href="story.html?user=lostinloop"></a>
-  <a class="story" href="story.html?user=tapmaster"></a>
-  <a class="story" href="story.html?user=doomposter"></a>
-</div>
-
+<div class="stories" id="storiesBar"></div>
 
 <main id="feed"></main>
 
@@ -166,7 +160,6 @@ font-size: 1.3rem;
 </div>
 
 <script>
-// Inject 50 achievements only if not set
 if (!localStorage.getItem("achievementList")) {
   const list = [];
   for (let i = 1; i <= 50; i++) {
@@ -180,7 +173,8 @@ if (!localStorage.getItem("achievementList")) {
 }
 
 const feed = document.getElementById("feed");
-const fakeUsernames = ["void_vibes", "scroller3000", "ghostfeed", "lostinloop", "tapmaster", "doomposter", "feed.exe", "no_signal", "lurkerbot", "user_0000"];
+const storiesBar = document.getElementById("storiesBar");
+const fakeUsernames = ["void_vibes", "scroller3000", "ghostfeed", "lostinloop", "tapmaster", "doomposter"];
 const fakeMessages = [
   "[ Empty Post ]",
   "[ You’re still here? ]",
@@ -191,6 +185,14 @@ const fakeMessages = [
   "[ Are you okay? ]",
   "[ Just one more... nothing. ]"
 ];
+
+fakeUsernames.forEach(username => {
+  const story = document.createElement("a");
+  story.className = "story";
+  story.href = `story.html?user=${username}`;
+  story.style.backgroundImage = `url('https://api.dicebear.com/7.x/personas/svg?seed=${username}')`;
+  storiesBar.appendChild(story);
+});
 
 const counter = document.getElementById("waste-counter");
 let secondsWasted = parseInt(localStorage.getItem("secondsWasted")) || 0;
@@ -234,13 +236,11 @@ function handleLike() {
   likeCounter.textContent = `Likes given: ${likesGiven}`;
 }
 
-// Create initial posts on load
 for (let i = 0; i < 10; i++) {
   const msg = fakeMessages[i % fakeMessages.length];
   createPost(msg);
 }
 
-// Load more on scroll
 window.addEventListener("scroll", () => {
   scrollCount++;
   localStorage.setItem("scrollCount", scrollCount);
